Feature/user access (#84)
* create client_allwed_users table schema

* implement client_allowed_users migration

* update user dto

* create model for client_allowed_access

* create client_allowed_user repository

* create and initialize service for client_allowed_users

* implement api routes for getting, and updating clients a user can access

* update API documentation with new admin, JWKS, and audit log endpoints and update host URL

* update error handling

* add client_allowed)users to delete list

* exclude identity provider to get result

* include filtered client access list in user list response DTO

* integrate allowed client associations into user models and DTOs with repository-level population logic

* integrate client repository into user service to include client access data in user responses

* update getuserlist

* fix select field message

* fix app client column spacing

* fix regular user connection

* fix message

---------
