# backend/internal/models/client_allowed_user.go
@@ -1,0 +1,9 @@
+package models
+
+import "time"
+
+type ClientAllowedUser struct {
+	ClientID   []byte    `db:"client_id"`
+	UserID     []byte    `db:"user_id"`
+	AssignedAt time.Time `db:"assigned_at"`
+}
